Fixed bug when user creates account

--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 
     <div class="center">
         <h1>Sign Up</h1>
-        <form action="/submit" method="post">
+        <form action="/signup" method="post">
             <div class="txt">
                 <input type="text" required name="username">
                 <label>Username</label>
