--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="./sign.css">
     <link rel="stylesheet" href="./homeprob.css">
+    <link rel="stylesheet" href="./problem.css">
 </head>
 <body>
     <div class="topnav">
@@ -15,12 +16,47 @@
         <a href="./register">Register</a>
     </div>
 
-    
-
     <br>
 
-    <a class="prob" href="./prob">P1 : Wrong Subtraction</a>
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
 
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
+
+    <div class="problem" onclick=" location.href = './prob'; ">
+        <span class="problemName">Sample Problem</span>
+        <button type="submit" class="submitButton">Solve</button>
+    </div>
     
 </body>
 </html>
